--- a/exercise-1-final/static/videoPage.html
+++ b/exercise-1-final/static/videoPage.html
@@ -13,75 +13,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-youtube/2.6.1/Youtube.min.js"></script>
 
     <script>
-
-        function getVideoViews(videoID){
-          $.ajax({
-            url: '/API/videos/'+videoID+'/',
-            type: "GET",
-            dataType: "json",
-            success: function (data) {
-              console.log(data)
-              $("#nviews"+videoID).html(data["views"])
-              console.log("update the number of views on the table for"+videoID)
-            },
-          })
-        }
-        function updateVideostable(){
-            $.ajax({
-                url: '/API/videos/',
-                type: "GET",
-                dataType: "json",
-                success: function (data) {
-                    console.log(data);
-                    $('#videosTable > tbody:last-child').empty()
-                    data["videos"].forEach(v => {
-                        console.log(v["video_id"]+" "+v["description"])
-                        $('#videosTable > tbody:last-child').
-                            append('<tr> <td>'+ v["video_id"]+'</td><td>' +v["description"] + '</td><td id="nviews'+v["video_id"]+'">xxx</td></tr>');
-                          getVideoViews(v["video_id"])
-                        // TODO  10 - Fill the column with the number of views of each video
-                    });
-                }
-            });
-
-        }
-        function addNewVideo(url, description){
-            // TODO 4 - create an object (requestData) that contains the url and descrition
-            // look at the server to understand what data should be sent.
-            let requestData={"description": description, 'url': url}
-            $.ajax({
-                url: '/API/videos/',
-                type: "POST",
-                dataType: "json",
-                contentType: 'application/json',
-                data: JSON.stringify(requestData),
-                success: function(data){
-                   //TODO 5 after creating the video update the table
-                  console.log("resppnse for video creation"+data)
-                  console.log(data)
-                  updateVideostable()
-                }
-            });
-        }
+        id = decodeURIComponent(window.location.search);
+        id = id.substring(1);
+        console.log(id);
         $(document).ready(function(){
-          updateVideostable()
-          $("#buttonUpdateVideotable").click(
-            //TODO 1 - configure the $("#buttonUpdateVideotable")
-            // to update the table when clicked
-            function(){
-              updateVideostable()
-            }
-          )
-            //TODO 2 - update the table when the page is loaded
-            $("#buttonAddVideo").click(function(){
-              newVideoURl = $("#newVideoURL").val()
-              newVideoDESC = $("#newVideoDescription").val()
-              addNewVideo(newVideoURl, newVideoDESC)
-                //TODO 3 - get the values of #newVideoURL and newVideoDescription
-                // and pass those values to the addNewVideo function
-
-            })
-
             var vPlayer = videojs('videoPlayer');
             vPlayer.src({ "type": "video/youtube", "src": "https://www.youtube.com/watch?v=xjS6SftYQaQ"});
             vPlayer.play()
@@ -97,42 +32,35 @@
                 vPlayer.currentTime( parseFloat($("#resumetime").val()))
                 vPlayer.play()
             })
+              //TODO 6 - get the value of #playVideoID
 
+              $.ajax({
+                //TODO 7 - retrieve the corresponding URL by
+              //        calling the /videos/<id>/ REST endpoint)
+                url: '/API/videos/'+id+'/',
+                type: "GET",
+                dataType: "json",
+                success: function (data) {
+                  console.log(data)
+                  url = data["url"]
+                  console.log(url)
+                  //TODO 8 - update the player with the url retrieved
+                  vPlayer.src({ "type": "video/youtube", "src": url});
+                  vPlayer.play()
 
-            $("#buttonPlayVideo").click(function(){
-              videoID = $("#playVideoID").val()
-
-                //TODO 6 - get the value of #playVideoID
-
-                $.ajax({
-                  //TODO 7 - retrieve the corresponding URL by
-                //        calling the /videos/<id>/ REST endpoint)
-                  url: '/API/videos/'+videoID+'/',
-                  type: "GET",
-                  dataType: "json",
-                  success: function (data) {
-                    console.log(data)
-                    url = data["url"]
-                    console.log(url)
-                    //TODO 8 - update the player with the url retrieved
-                    vPlayer.src({ "type": "video/youtube", "src": url});
-                    vPlayer.play()
-
-                    $.ajax({
-                      //TODO 9 - increase the number of views
-                      url: '/API/videos/'+videoID+'/views',
-                      type: "PUT",
-                      dataType: "json",
-                      success: function (data) {
-                        console.log(data)
-                      }
-                    })
-                  }
-                });
+                  $.ajax({
+                    //TODO 9 - increase the number of views
+                    url: '/API/videos/'+id+'/views',
+                    type: "PUT",
+                    dataType: "json",
+                    success: function (data) {
+                      console.log(data)
+                    }
+                  })
+                }
+              });
 
                // TODO 11 - update the table
-
-            })
 
         });
 
@@ -140,39 +68,7 @@
 
   </head>
   <body>
-    <h3>List of videos</h3>
-    <table class="ui celled table selectable" id="videosTable" >
-      <thead>
-        <tr>
-          <th>ID</th>  <th>Description</th>   <th>Views</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
-    <button class="ui button" id="buttonUpdateVideotable">
-      Update List
-    </button>
-
-    <h3>Add a new Video</h3>
-    <div class="ui input">
-      <input type="text" placeholder="Video URL" id="newVideoURL">
-    </div>
-    <div class="ui input">
-      <input type="text" placeholder="Video Description" id="newVideoDescription">
-    </div>
-    <button class="ui button" id="buttonAddVideo">
-      Add new Video
-    </button>
-
-    <h3>Play Video</h3>
-    <div class="ui input">
-      <input type="text" placeholder="Video id" id="playVideoID">
-    </div>
-    <button class="ui button" id="buttonPlayVideo">
-      Play
-    </button>
-    <br>
+   
 
     <video  id="videoPlayer" controls
             class="video-js vjs-default-skin"
