--- a/exercise-1-final/static/videoListing.html
+++ b/exercise-1-final/static/videoListing.html
@@ -1,11 +1,13 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css"  href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.css">
-    <script  src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.js">  </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-xmlrpc/0.4.3/jquery.xmlrpc.js"> </script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.css">
+    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-xmlrpc/0.4.3/jquery.xmlrpc.js">
+    </script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <link href="https://vjs.zencdn.net/7.8.4/video-js.css" rel="stylesheet" />
@@ -17,124 +19,121 @@
         name = name.substring(1);
         console.log(name);
 
-        function getVideoViews(videoID){
-          $.ajax({
-            url: '/API/videos/'+videoID+'/',
-            type: "GET",
-            dataType: "json",
-            success: function (data) {
-              console.log(data)
-              $("#nviews" + videoID).html(data["views"])
-              console.log("update the number of views on the table for" + videoID)
-            },
-          })
+        function getVideoViews(videoID) {
+            $.ajax({
+                url: '/API/videos/' + videoID + '/',
+                type: "GET",
+                dataType: "json",
+                success: function(data) {
+                    console.log(data)
+                    $("#nviews" + videoID).html(data["views"])
+                    console.log("update the number of views on the table for" + videoID)
+                },
+            })
         }
-        function updateVideostable(){
+
+        function updateVideostable() {
             $.ajax({
                 url: '/API/videos/',
                 type: "GET",
                 dataType: "json",
-                success: function (data) {
+                success: function(data) {
                     console.log(data);
                     $('#videosTable > tbody:last-child').empty()
                     data["videos"].forEach(v => {
                         console.log(v["video_id"] + " " + v["description"])
                         $('#videosTable > tbody:last-child').
-                            append('<tr> <td>'+ v["video_id"]+'</td><td>' +v["description"] + '</td><td id="nviews'+v["video_id"]+'">xxx</td></tr>');
-                          getVideoViews(v["video_id"])
-                        // TODO  10 - Fill the column with the number of views of each video
+                        append('<tr> <td>' + v["video_id"] + '</td><td>' + v["description"] + '</td><td id="nviews' + v["video_id"] + '">xxx</td></tr>');
+                        getVideoViews(v["video_id"])
+                            // TODO  10 - Fill the column with the number of views of each video
                     });
                 }
             });
-
         }
-        function addNewVideo(url, description){
+
+        function addNewVideo(url, description) {
             // TODO 4 - create an object (requestData) that contains the url and descrition
             // look at the server to understand what data should be sent.
-            let requestData={"description": description, 'url': url}
+            let requestData = {
+                "description": description,
+                'url': url
+            }
             $.ajax({
                 url: '/API/videos/',
                 type: "POST",
                 dataType: "json",
                 contentType: 'application/json',
                 data: JSON.stringify(requestData),
-                success: function(data){
-                   //TODO 5 after creating the video update the table
-                  console.log("resppnse for video creation"+data)
-                  console.log(data)
-                  updateVideostable()
+                success: function(data) {
+                    //TODO 5 after creating the video update the table
+                    console.log("resppnse for video creation" + data)
+                    console.log(data)
+                    updateVideostable()
                 }
             });
         }
-        $(document).ready(function(){
-          $("#hello").html("Welcome, " + name);
-          updateVideostable()
-          $("#buttonUpdateVideotable").click(
-            //TODO 1 - configure the $("#buttonUpdateVideotable")
-            // to update the table when clicked
-            function(){
-              updateVideostable()
-            }
-          )
-            //TODO 2 - update the table when the page is loaded
-            $("#buttonAddVideo").click(function(){
-              newVideoURl = $("#newVideoURL").val()
-              newVideoDESC = $("#newVideoDescription").val()
-              addNewVideo(newVideoURl, newVideoDESC)
-                //TODO 3 - get the values of #newVideoURL and newVideoDescription
-                // and pass those values to the addNewVideo function
-
+        $(document).ready(function() {
+            $("#hello").html("Welcome, " + name);
+            updateVideostable()
+            $("#buttonUpdateVideotable").click(
+                    //TODO 1 - configure the $("#buttonUpdateVideotable")
+                    // to update the table when clicked
+                    function() {
+                        updateVideostable()
+                    }
+                )
+                //TODO 2 - update the table when the page is loaded
+            $("#buttonAddVideo").click(function() {
+                newVideoURl = $("#newVideoURL").val()
+                newVideoDESC = $("#newVideoDescription").val()
+                addNewVideo(newVideoURl, newVideoDESC)
+                    //TODO 3 - get the values of #newVideoURL and newVideoDescription
+                    // and pass those values to the addNewVideo function
             })
 
-            $("#buttonPlayVideo").click(function(){
-              videoID = $("#playVideoID").val()
-              window.location.href = "static/videoPage.html?" + videoID;
+            $("#buttonPlayVideo").click(function() {
+                videoID = $("#playVideoID").val()
+                window.location.href = "static/videoPage.html?" + videoID;
             })
         });
-
     </script>
+</head>
 
-  </head>
-  <body>
-  </br>
+<body>
+    </br>
     <h2 id="hello"></h2>
-  </br>
+    </br>
     <h3>List of videos</h3>
-    <table class="ui celled table selectable" id="videosTable" >
-      <thead>
-        <tr>
-          <th>ID</th>  <th>Description</th>   <th>Views</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
+    <table class="ui celled table selectable" id="videosTable">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Description</th>
+                <th>Views</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
     </table>
-    <button class="ui button" id="buttonUpdateVideotable">
-      Update List
-    </button>
+    <button class="ui button" id="buttonUpdateVideotable">Update List</button>
 
     <h3>Add a new Video</h3>
     <div class="ui input">
-      <input type="text" placeholder="Video URL" id="newVideoURL">
+        <input type="text" placeholder="Video URL" id="newVideoURL">
     </div>
     <div class="ui input">
-      <input type="text" placeholder="Video Description" id="newVideoDescription">
+        <input type="text" placeholder="Video Description" id="newVideoDescription">
     </div>
-    <button class="ui button" id="buttonAddVideo">
-      Add new Video
-    </button>
+    <button class="ui button" id="buttonAddVideo">Add new Video</button>
 
     <h3>Play Video</h3>
     <div class="ui input">
-      <input type="text" placeholder="Video id" id="playVideoID">
+        <input type="text" placeholder="Video id" id="playVideoID">
     </div>
-    <button class="ui button" id="buttonPlayVideo">
-      Play
-    </button>
+    <button class="ui button" id="buttonPlayVideo">Play</button>
+
     <br>
-    <button class="ui button" onclick="window.location='{{ url_for("logout") }}'">
-      Logout
-    </button>
-  </body>
+    <button class="ui button" onclick="window.location='{{ url_for(" logout ") }}'">Logout</button>
+</body>
 
 </html>
